tearing j2dclient into its parts